--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	
 
 	<!-- Script libraries -->
-		<script src="http://code.jquery.com/jquery-1.11.2.min.js"></script>
+		<script src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
 		<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
 		<script src="//da189i1jfloii.cloudfront.net/js/kinvey-html5-1.1.9.min.js"></script>
 		<script src="https://cdn.rawgit.com/CodeSeven/toastr/master/build/toastr.min.js"></script>
@@ -30,7 +30,7 @@
 			<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.28/angular.min.js"></script>
 			<script src="https://code.angularjs.org/1.2.28/angular-route.js"></script>
 			<script src="https://code.angularjs.org/1.2.28/angular-touch.js"></script>
-			<script src="http://maps.google.com/maps/api/js"></script>
+			<script src="https://maps.google.com/maps/api/js"></script>
 			<script src="https://code.angularjs.org/1.3.10/angular-sanitize.js"></script>
 			<script src="js/plugins/angular-map.js"></script>
 			<script src="js/plugins/ngDialog.min.js"></script>
